@@ -6,28 +6,11 @@ import guess.util.LocalizationUtils;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * Company DTO.
  */
-public class CompanyDto {
-    private final long id;
-    private final String name;
-
-    public CompanyDto(long id, String name) {
-        this.id = id;
-        this.name = name;
-    }
-
-    public long getId() {
-        return id;
-    }
-
-    public String getName() {
-        return name;
-    }
-
+public record CompanyDto(long id, String name) {
     public static CompanyDto convertToDto(Company company, Language language) {
         return new CompanyDto(
                 company.getId(),
@@ -37,7 +20,7 @@ public class CompanyDto {
     public static List<CompanyDto> convertToDto(List<Company> companies, Language language) {
         return companies.stream()
                 .map(c -> convertToDto(c, language))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
