@@ -10,45 +10,17 @@ import guess.util.LocalizationUtils;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Account error details DTO.
  */
-public class AccountErrorDetailsDto {
-    private final SpeakerPairDto speaker;
-    private final String twitter;
-    private final String gitHub;
-    private final List<AccountAnswerDto> yourAnswers;
-
-    public AccountErrorDetailsDto(SpeakerPairDto speaker, String twitter, String gitHub, List<AccountAnswerDto> yourAnswers) {
-        this.speaker = speaker;
-        this.twitter = twitter;
-        this.gitHub = gitHub;
-        this.yourAnswers = yourAnswers;
-    }
-
-    public SpeakerPairDto getSpeaker() {
-        return speaker;
-    }
-
-    public String getTwitter() {
-        return twitter;
-    }
-
-    public String getGitHub() {
-        return gitHub;
-    }
-
-    public List<AccountAnswerDto> getYourAnswers() {
-        return yourAnswers;
-    }
-
+public record AccountErrorDetailsDto(SpeakerPairDto speaker, String twitter, String gitHub,
+                                     List<AccountAnswerDto> yourAnswers) {
     private static AccountErrorDetailsDto convertToDto(ErrorDetails errorDetails, GuessMode guessMode, Language language) {
         if (GuessMode.GUESS_ACCOUNT_BY_SPEAKER_MODE.equals(guessMode) || GuessMode.GUESS_SPEAKER_BY_ACCOUNT_MODE.equals(guessMode)) {
             List<Speaker> speakers = errorDetails.availableAnswers().stream()
                     .map(q -> ((SpeakerAnswer) q).getSpeaker())
-                    .collect(Collectors.toList());
+                    .toList();
 
             Set<Speaker> speakerDuplicates = LocalizationUtils.getSpeakerDuplicates(
                     speakers,
@@ -69,7 +41,7 @@ public class AccountErrorDetailsDto {
                                             ((SpeakerAnswer) a).getSpeaker().getPhotoFileName()),
                                     null,
                                     null))
-                    .collect(Collectors.toList());
+                    .toList();
 
             return new AccountErrorDetailsDto(
                     new SpeakerPairDto(
@@ -86,6 +58,6 @@ public class AccountErrorDetailsDto {
     public static List<AccountErrorDetailsDto> convertToDto(List<ErrorDetails> errorDetailsList, GuessMode guessMode, Language language) {
         return errorDetailsList.stream()
                 .map(e -> convertToDto(e, guessMode, language))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
